--- a/LKS_frondend/grid.html
+++ b/LKS_frondend/grid.html
@@ -92,7 +92,7 @@
 			width: 90%;
 			display: grid;
 			grid-template-areas:
-			'posttitle posttitle potstitle posttitle';
+			'posttitle posttitle potstitle posttitle posttitle';
 		}
 	}
 	@media screen  and (max-width: 575px)
